--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   react_demo:
-    image: demo:latest
-    container_name: react 
+    image: demoimage:s1
+    container_name: react_demo 
     ports:
-      - "3000:3000"
+      - "80:80"
