--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
   web:
-    image: zeh/dev:${BUILD_NUMBER}
+    image: zehara19/capstone-public-dev:${BUILD_NUMBER}
     ports:
     - 80:80
